<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item

            android:id="@+id/home_menu_item"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />

        <item

            android:id="@+id/my_product_menu_item"
            android:icon="@drawable/ic_baseline_view_list_24"
            android:title="@string/my_products" />

        <item

            android:id="@+id/add_product_menu_item"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/add_product" />

        <item

            android:id="@+id/pending_payment_product_menu_item"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/pending_payment" />

        <item
            android:id="@+id/logout_menu_item"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/logout" />
    </group>
</menu>